rename classes and update method names